# atavide_lite

./: .gitignore  MANIFEST.in  README.md  atavide-2480762.out.txt  atavide-2480763.out.txt  atavide.sh  pyproject.toml  setup.py  util.py
atavide/: __main__.py  atavide.CITATION
atavide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
atavide/config/: config.yaml  system_config.yaml
atavide/scripts/: fastq2fasta.c  join.py  merge_taxonomy.py  summarise_taxonomy.py
atavide/workflow/: Snakefile  install.nf  mag.nf  main.nf  nextflow.config
atavide/workflow/rules/: preflight.smk
