[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atavide"
version = "0.1.0"
description = "metagenome processing pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "atavide.LICENSE"}
keywords =['bioinformatics', 'metagenomes']
authors = [
    {name = "Robert Edwards", email = "robert.edwards@flinders.edu.au"}
]
maintainers = [
    {name = "Bhavya Papudeshi", email = "nala0006@flinders.edu.au"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "requires-python" key in this file.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "nextflow>=24.4.4",
    "pyyaml>=6.0",
    "Click>=8.1.3", 
]

[tool.setuptools]
packages = ["atavide"]  # Specify the directories you want as packages

[project.scripts]
atavide = "atavide.__main__:main"